--- a/prototype/less/variables_mixins.less
+++ b/prototype/less/variables_mixins.less
@@ -21,10 +21,10 @@
 @highlight-text-color: #424242;
 @country-stat-blue: #0092cf;
 
-//
 @map-top-banner-bg: #015c8f;
 @map-panel-banner-bg: #005382;
 @map-panel-border: #004a75;
+@map-options-border: #006e9b;
 
 // font sizess
 @nav-text-size: 0.8em;
